change game service to python

--- a/games/Dockerfile
+++ b/games/Dockerfile
@@ -1,12 +1,11 @@
-FROM node:alpine
+FROM python:3.9-slim
 
 WORKDIR /games
 
 COPY . .
 
-RUN npm install @grpc/grpc-js --force
-
+RUN pip install grpcio-tools kafka-python pymongo mongoengine aiokafka asyncio 
 
 EXPOSE 50052
 
-CMD ["node", "gamesMicroservice.js"]
+CMD ["python3", "gamesMicroservice.py"]
