--- a/playbook.yml
+++ b/playbook.yml
@@ -7,21 +7,21 @@
     ignore_errors: yes
   
   - name : Remove gateway image
-    command : docker rmi projet-microservices-gateway-service --force
+    command : docker rmi achrafladhari/gateway --force
     ignore_errors: yes
     
   - name : Remove swagger image
-    command : docker rmi projet-microservices-swagger-service --force
+    command : docker rmi achrafladhari/swagger --force
     ignore_errors: yes
   
   - name : Remove orders service image
-    command : docker rmi projet-microservices-orders-service --force
+    command : docker rmi achrafladhari/orders --force
     ignore_errors: yes
 
   - name : Remove games service image
-    command : docker rmi projet-microservices-games-service --force
+    command : docker rmi achrafladhari/games --force
     ignore_errors: yes
 
   - name : Remove users service image
-    command : docker rmi projet-microservices-users-service --force
+    command : docker rmi achrafladhari/users --force
     ignore_errors: yes
