--- a/playbook.yml
+++ b/playbook.yml
@@ -7,21 +7,21 @@
     ignore_errors: yes
   
   - name : Remove gateway image
-    command : docker rmi achrafladhari/gateway --force
+    command : docker rmi achrafladhari/gateway:$((BUILD_ID - 1)) --force
     ignore_errors: yes
     
   - name : Remove swagger image
-    command : docker rmi achrafladhari/swagger --force
+    command : docker rmi achrafladhari/swagger:$((BUILD_ID - 1)) --force
     ignore_errors: yes
   
   - name : Remove orders service image
-    command : docker rmi achrafladhari/orders --force
+    command : docker rmi achrafladhari/orders:$((BUILD_ID - 1)) --force
     ignore_errors: yes
 
   - name : Remove games service image
-    command : docker rmi achrafladhari/games --force
+    command : docker rmi achrafladhari/games:$((BUILD_ID - 1)) --force
     ignore_errors: yes
 
   - name : Remove users service image
-    command : docker rmi achrafladhari/users --force
+    command : docker rmi achrafladhari/users:$((BUILD_ID - 1)) --force
     ignore_errors: yes
